[package]
name = "badbunny"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
cryptify = "3.1.1"
rand = "0.9.1"
winapi = {version = "0.3.9", features = ["memoryapi", "processthreadsapi", "winnt", "winreg", "libloaderapi"]}

[profile.release]
opt-level = 3
lto = true

[build-dependencies]
winres = "0.1"